Fix link contrast

--- a/themes/hyde-hyde-hyde-zola/sass/hyde-hyde/_variables.scss
+++ b/themes/hyde-hyde-hyde-zola/sass/hyde-hyde/_variables.scss
@@ -105,5 +105,5 @@ $content-margin-left: $sidebar-width + 2rem;
 $content-margin-right: 2rem;
 
 // navigation
-$navigation-color: #268bd2;
+$navigation-color: #167bc2;
 
